<resources>
	<string name="app_name">Coordinator Examples</string>

	<string name="example_title">This is an awesome title</string>
	<string name="example_subtitle">I\'m a cool subtitle, larger than the title</string>

	<string name="text_header">Text</string>
	<string name="flexible_title">Flexible space</string>

	<string name="header_about">About</string>
	<string name="header_examples">Examples</string>

	<string name="item_flexible_space_example">Flexible space example</string>
	<string name="item_simple_coordinator_example">Simple coordinator example</string>
	<string name="item_googleio_example">Google IO Detail example</string>
	<string name="item_materialup_example">Material up profile example</string>

	<string name="lorem">
		Lorem ipsum dolor sit amet, consectetur adipiscing elit.
		In mollis est vitae erat laoreet consectetur. Mauris dui mauris,
		dictum vel egestas vel, porta sed ante. Phasellus congue viverra ipsum,
		in elementum arcu ultricies nec.Morbi tincidunt nisl lacinia, placerat nisi eget, luctus tortor.
		Morbi efficitur dictum leo, sit amet volutpat lorem sodales nec. Quisque et erat et turpis fringilla condimentum.
		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris auctor vulputate libero vitae iaculis.
		Curabitur id blandit quam. Praesent massa ante, pulvinar vitae sagittis commodo, scelerisque porttitor eros.
		Mauris suscipit a enim nec congue. Mauris tristique cursus aliquet. Nunc quis hendrerit nunc. Praesent tristique tellus purus,
		a pretium ex gravida id. Cras laoreet malesuada nulla, at bibendum metus ultricies a. Fusce eu ornare arcu. Proin ut molestie est.
		Vestibulum quis vehicula erat. Nam sed tempus nibh. Sed tortor ante, maximus venenatis odio sed, ultricies maximus lectus.
		Aliquam sed volutpat ligula. Integer bibendum, magna ac lacinia suscipit,
		risus libero rutrum justo, sed tempus augue tellus eget est. Curabitur convallis augue nisl,
		id efficitur urna posuere faucibus. Ut sed egestas nulla, eu finibus metus. Nunc a arcu ante.
		Aenean ullamcorper dolor non condimentum congue. Aenean mauris nunc, pellentesque at placerat vitae,
		aliquet quis orci. Curabitur maximus augue ut bibendum sagittis.
	</string>

	<string name="about">
		This example shows different CoordinatorLayout usage examples, like the use of \'anchor\' in views,
		flexible space and some more tips.\n\n

		This code has also been used as an example for the presentation given at the Spanish GDG Summit 2015:
		\'Tools and tips of the trade for the Android developer\'. Whose slides will be published soon :)

		\n\n Enjoy
	</string>
	<string name="swype.help">The \'Swipe to dismiss\' behavior allows you to easily add the \'Swipe to dismiss\' functionality in a View inside a CoordinatorLayout</string>
	<string name="title_mup_name">Saúl Molinero</string>
	<string name="subtitle_mup">Here I am with a subtitle</string>
</resources>
