<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/background_light"
	>

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/ioexample.appbar"
		android:layout_width="match_parent"
		android:layout_height="300dp"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
		>

		<com.google.android.material.appbar.CollapsingToolbarLayout
			android:id="@+id/ioexample.collapsing"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:layout_scrollFlags="scroll|exitUntilCollapsed"
			app:contentScrim="?attr/colorPrimary"
			app:expandedTitleMarginStart="48dp"
			app:expandedTitleMarginEnd="64dp"
			>

			<ImageView
				android:id="@+id/ioexample.backdrop"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:scaleType="centerCrop"
				android:src="@drawable/material_flat"
				app:layout_collapseMode="parallax"
				tools:ignore="ContentDescription"
				/>
		</com.google.android.material.appbar.CollapsingToolbarLayout>

	</com.google.android.material.appbar.AppBarLayout>

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="56dp"
			android:textSize="20sp"
			android:lineSpacingExtra="8dp"
			android:text="@string/lorem"
			android:padding="@dimen/activity_horizontal_margin"
			/>
	</androidx.core.widget.NestedScrollView>

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/ioexample.toolbar"
		android:layout_width="match_parent"
		android:layout_height="112dp"
		android:background="@color/brand_primary"
		android:elevation="4dp"
		app:layout_collapseMode="pin"
		app:layout_anchor="@id/ioexample.appbar"
		app:layout_anchorGravity="bottom"
		app:theme="@style/ThemeOverlay.AppCompat.Light"
		style="@style/ToolBarWithNavigationBack"
		>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:layout_marginBottom="8dp"
			android:minHeight="?android:attr/actionBarSize"
			android:orientation="vertical"
			>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
				android:text="@string/example_title"
				/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle.Inverse"
				android:text="@string/example_subtitle"
				/>
		</LinearLayout>
	</androidx.appcompat.widget.Toolbar>
</androidx.coordinatorlayout.widget.CoordinatorLayout>