<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/annonce.main.coordinator"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:ignore="RtlHardcoded"
	>

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/flexible.example.appbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
		>

		<com.google.android.material.appbar.CollapsingToolbarLayout
			android:id="@+id/flexible.example.collapsing"
			android:layout_width="match_parent"
			android:layout_height="300dp"
			app:title="@string/flexible_title"
			app:expandedTitleMarginBottom="94dp"
			app:layout_scrollFlags="scroll|exitUntilCollapsed"
			app:expandedTitleTextAppearance="@style/CollapsingTextAppearance.Inverse"
			app:contentScrim="?colorPrimary"
			>

			<ImageView
				android:layout_width="fill_parent"
				android:layout_height="match_parent"
				android:src="@drawable/london_flat"
				android:tint="#BB3E50B4"
				android:scaleType="centerCrop"
				/>

			<androidx.appcompat.widget.Toolbar
				android:id="@+id/flexible.example.toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				android:background="@null"
				app:layout_collapseMode="pin"
				style="@style/ToolBarWithNavigationBack"
				/>
		</com.google.android.material.appbar.CollapsingToolbarLayout>
	</com.google.android.material.appbar.AppBarLayout>

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:scrollbars="none"
		app:behavior_overlapTop="78dp"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			>

			<androidx.cardview.widget.CardView
				android:id="@+id/flexible.example.cardview"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:contentPaddingBottom="16dp"
				app:contentPaddingLeft="16dp"
				app:contentPaddingRight="16dp"
				app:cardCornerRadius="4dp"
				app:cardBackgroundColor="@android:color/white"
				app:cardElevation="4dp"
				android:layout_margin="8dp"
				>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					>

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/text_header"
						android:textAppearance="@style/TextAppearance.Header"
						style="@style/TextComponent.ItemRow"
						/>

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:fontFamily="sans-serif-light"
						android:lineSpacingExtra="8dp"
						android:textSize="16sp"
						android:text="@string/lorem"
						/>
				</LinearLayout>
			</androidx.cardview.widget.CardView>
		</LinearLayout>
	</androidx.core.widget.NestedScrollView>

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/flexible.example.fab"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginRight="32dp"
		android:elevation="8dp"
		android:src="@drawable/ic_adb_24dp"
		app:layout_anchor="@id/flexible.example.cardview"
		app:layout_anchorGravity="top|right|end"
		tools:ignore="RtlHardcoded"
		/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
